--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Portfolio of Put Your Name Here</title>
+<title>Josephine Weathington</title>
 </head>
 <body>
-<h1>Hello World - Portfolio of Put Your Name Here</h1>
+    
+<h1>Enjoys the challenge of creating web design experiences.</h1>
+    <h2>Possesses knowledge of HTML, CSS, Javascript, PHP,  UI/UX, and possess 10+ years of customer service experience.</h2>
 </body>
 </html>
