--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Josephine Weathington</title>
 </head>
 <body>
-    
+<img src="assets/images/temporary-portrait.jpg"/>   
 <h1>Enjoys the challenge of creating web design experiences.</h1>
     <h2>Possesses knowledge of HTML, CSS, Javascript, PHP,  UI/UX, and possess 10+ years of customer service experience.</h2>
 </body>
