--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 <body>
 <img src="assets/images/temporary-portrait.jpg"/>   
-<h1>Enjoys the challenge of creating web design experiences.</h1>
-    <h2>Possesses knowledge of HTML, CSS, Javascript, PHP,  UI/UX, and possess 10+ years of customer service experience.</h2>
+<h1>A student majoring in web development at the University of Arkansas at Little Rock with fresh experience in graphic & web 
+    design.</h1>
+<p>I have a passion for UI/UX design (user interface/user experience) and am interested in pursuing a career in UI/UX. 
+I have experience in html, css, javascript, & UI/UX; skills that I will demonstrate throughout my website. 
+Also, I have over 10 years of customer service experience that has refined my communication & listening skills, thus making me a 
+valuable member of a development team. Please enjoy my website. I’ve chosen a garden theme to represent my growth in the
+knowledge of web development, design, communication, and even a little bit of philosophy.</p>
 </body>
 </html>
