--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <title>Josephine Weathington</title>
 </head>
 <body>
+    <div class="container">
+        <header class="primary">
+            <nav class="menu">
+                <ul>
+                    <li>Profile</li>
+                    <li a href="resume.html">Resume</a></li>
+                    <li>Education & Projects</li>
+                    <li>Cover Letter</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </header>
 <img src="assets/images/temporary-portrait.jpg"/>   
 <h1>A student majoring in web development at the University of Arkansas at Little Rock with fresh experience in graphic & web 
     design.</h1>
@@ -12,5 +24,6 @@ I have experience in HTML, CSS, Javascript, & UI/UX; skills that I will demonstr
 Also, I have over 10 years of customer service experience that has refined my communication & listening skills, thus making me a 
 valuable member of a development team. Please enjoy my website. I’ve chosen a garden theme to represent my growth in the
 knowledge of web development, design, communication, and even a little bit of philosophy.</p>
+    </div>
 </body>
 </html>
