--- a/resume.html
+++ b/resume.html
@@ -9,52 +9,69 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="container">
+<div class="wrap">
 <header>
-<!--nav goes here-->
+    <div class="container">
+        <header class="primary">
+            <nav class="menu">
+                <ul>
+                    <li>Profile</li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li>Education & Projects</li>
+                    <li>Cover Letter</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </header>
 </header>
 <!--QR CODE GOES HERE-->
-
-JOSEPHINE WEATHINGTON
-
-Web Development & Design
-
-
-
-501.766.0635 jcweathingto@ualr.edu Little Rock, AR joweathington.wordpress.com IT Project Portfolio
-
-
-
-SKILLS         ‌
-Written & Oral Communication Creativity
-
-Problem Solving
-
-Presentation & Public Speaking
+<section id="author" class="container">
+    <h1>JOSEPHINE WEATHINGTON</h1>
+    <h2>Web Development & Design</h2>
+    <ul>
+        <li>Little Rock, AR</li>
+        <li>jcweathingto@ualr.edu</li>
+        <li><a href="https://jcweathington.github.io/it-topaz/">IT Project Portfolio</a></li>
+    </ul>
+</section><!--author-->
 
 
+<section id="skills" class="container">
+<div class="success-skills"
+    <header>
+    <h2>SKILLS</h2>
+    </header>
+<ul>
+    <li>Written & Oral Communication 
+    </li>
+    <li>Creativity & Problem Solving
+    </li>
+    <li>Presentation & Public Speaking
+    </li>
+</ul> 
+</div><!--.success-skills-->
+<div class="tech-skills">
+    <header>
+        <h2>TECHNICAL (IT) SKILLS</h2>
+    </header>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>PHP</li>
+        <li>Javascript</li>
+        <li>Adobe XD</li>
+        <li>Adobe Illustrator</li>
+        <li>Adobe InDesign</li>
+        <li>Adobe Photoshop</li>
+        <li>Adobe Premiere Pro</li>
+    </ul>
+</div>
+</section>
 
-TECHNICAL (IT) SKILLS
-
-
-
-
-
-
-
-
-HTML CSS PHP
-
-Javascript Adobe XD Adobe Illustrator
-
-Adobe Photoshop
-
-Adobe Premiere Adobe InDesign
-
-
-
-
-EDUCATION             
+<section id="education" class="container">
+<header>
+    <h2>EDUCATION </h2>
+</header>            
 University of Arkansas Little Rock, Bachelors in Web Development with Digital Design Minor
 Present - Expected Graduation May 2023
 
@@ -82,7 +99,7 @@ Graphic Design
 ARST 3385
 
 Vector Graphics
-
+</section>
 
 
 WORK EXPERIENCE
@@ -103,6 +120,6 @@ CareLink, Receptionist
 November 2013 – December 2015
 
 Answered general inquiries. Welcomed, greeted, and directed visitors & callers.
-</div>
+</div><!--.wrap-->
 </body>
 </html>
