--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <header class="primary">
             <nav class="menu">
                 <ul>
-                    <li>Profile</li>
-                    <li a href="resume.html">Resume</a></li>
+                    <li><a href="index.html">Profile</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                     <li>Education & Projects</li>
                     <li>Cover Letter</li>
                     <li>Contact</li>
