--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Josephine Weathington</title>
+<meta charset="utf-8">
+<title>Josephine Weathington"s Resume</title>
+<meta name="description" content="A Web Developer & Graphic Designer">
+<meta name="keywords" content="HTML, CSS, PHP ,JavaScript">
+<meta name="author" content="Josephine">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div class="container">
+<div class="wrap">
         <header class="primary">
             <nav class="menu">
                 <ul>
@@ -16,7 +21,7 @@
                 </ul>
             </nav>
         </header>
-<img src="assets/images/temporary-portrait.jpg"/>   
+<img src="assets/images/temporary-portrait.jpg" alt="portrait"/>   
 <h1>A student majoring in web development at the University of Arkansas at Little Rock with fresh experience in graphic & web 
     design.</h1>
 <p>I have a passion for UI/UX design (user interface/user experience) and am interested in pursuing a career in UI/UX. 
@@ -24,6 +29,6 @@ I have experience in HTML, CSS, Javascript, & UI/UX; skills that I will demonstr
 Also, I have over 10 years of customer service experience that has refined my communication & listening skills, thus making me a 
 valuable member of a development team. Please enjoy my website. I’ve chosen a garden theme to represent my growth in the
 knowledge of web development, design, communication, and even a little bit of philosophy.</p>
-    </div>
+</div>
 </body>
 </html>
