--- a/resume.html
+++ b/resume.html
@@ -10,12 +10,10 @@
 </head>
 <body>
 <div class="wrap">
-<header>
-    <div class="container">
         <header class="primary">
             <nav class="menu">
                 <ul>
-                    <li>Profile</li>
+                    <li><a href="index.html">Profile</a></li>
                     <li><a href="resume.html">Resume</a></li>
                     <li>Education & Projects</li>
                     <li>Cover Letter</li>
@@ -23,7 +21,6 @@
                 </ul>
             </nav>
         </header>
-</header>
 <!--QR CODE GOES HERE-->
 <section id="author" class="container">
     <h1>JOSEPHINE WEATHINGTON</h1>
@@ -33,11 +30,12 @@
         <li>jcweathingto@ualr.edu</li>
         <li><a href="https://jcweathington.github.io/it-topaz/">IT Project Portfolio</a></li>
     </ul>
+        <p>You are welcome to download my resume in either <a href="assets/documents/resume.doc">Microsoft Word</a> 
+            or <a href="assets/documents/resume.pdf" target="blank">PDF format</a>.</p>
 </section><!--author-->
 
-
 <section id="skills" class="container">
-<div class="success-skills"
+<div class="success-skills">
     <header>
     <h2>SKILLS</h2>
     </header>
@@ -71,55 +69,59 @@
 <section id="education" class="container">
 <header>
     <h2>EDUCATION </h2>
-</header>            
-University of Arkansas Little Rock, Bachelors in Web Development with Digital Design Minor
-Present - Expected Graduation May 2023
-
-I enjoy learning new concepts and the challenge of applying them to solve problems. I have a passion for UI/UX (user interface/user experience) & am interested in working with a team to develop interactive websites.
-
-
-
-Courses Include:
-CPSC 4379
-
-Principles of UI/UX
-
-IFSC 3342
-
-Mobile Web Development
-
-ITEC 4610
-
-Project Development & Portfolio Defense
-
-ARST 3340
-
-Graphic Design
-
-ARST 3385
-
-Vector Graphics
+</header>
+    <h3>University of Arkansas Little Rock, Bachelors in Web Development with Digital Design Minor</h3> 
+        <p>Present - Expected Graduation May 2023</p>           
+        <p>I enjoy learning new concepts and the challenge of applying them to solve problems. I have a passion 
+    for UI/UX (user interface/user experience) & am interested in working with a team to develop interactive websites.</p>
+    <h3>Courses Include:</h3>
+        <table>
+            <tr>
+                <td>CPSC</td>
+                <td>4379</td>
+                <td>Principles of UI/UX</td>
+            </tr>
+            <tr>
+                <td>IFSC</td>
+                <td>3342</td>
+                <td>Mobile Web Development</td>
+            </tr>
+            <tr>
+                <td>ITEC</td>
+                <td>4610</td>
+                <td>Project Development & Portfolio Defense</td>
+            </tr>
+            <tr>
+                <td>ARST</td>
+                <td>3340</td>
+                <td>Graphic Design</td>
+            </tr>
+            <tr>
+                <td>ARST</td>
+                <td>3385</td>
+                <td>Vector Graphics</td>
+            </tr>
+        </table>
 </section>
 
+<section id="work" class="container">
+    <header>
+        <h2>WORK EXPERIENCE
+        </h2>
+    </header>
+<p>I have over 10 years of customer service experience that has refined my communication skills, thus making me a valuable 
+member of a development team. Here are my latest two positions in customer service.</p>
 
-WORK EXPERIENCE
+<h3>CareLink, Human Resources</h3>
+<p>December 2015 &#8211; December 2019</p>
+<p>Ensured company & employee compliance of Federal & State regulations and managed employee benefits 
+(Health, Workers Compensation, & Family Medical Leave of Absence).</p>
 
 
-I have over 10 years of customer service experience that has refined my communication skills, thus making me a valuable member of a development team. Here are my latest two positions in customer service.
-
-
-
-CareLink, Human Resources
-December 2015 – December 2019
-
-Ensured company & employee compliance of Federal & State regulations and managed employee benefits (Medical, Dental, Vision, Workers Compensation, & Family Medical Leave of Absence).
-
-
-
-CareLink, Receptionist
-November 2013 – December 2015
-
-Answered general inquiries. Welcomed, greeted, and directed visitors & callers.
+<h3>CareLink, Receptionist</h3>
+<p>November 2013 &#8211; December 2015</p>
+<p>Answered general inquiries. Welcomed, greeted, and directed visitors & callers.</p>
+</section>
 </div><!--.wrap-->
 </body>
 </html>
