--- a/resume.html
+++ b/resume.html
@@ -80,26 +80,40 @@
                 <td>CPSC</td>
                 <td>4379</td>
                 <td>Principles of UI/UX</td>
+                <td>The theory and practice of software user-interface (UI) and user experience (UX) design, including theories 
+                    underlying industry-standard techniques for effective user interfaces in a variety of systems 
+                    (e.g., online computer games, mobile applications).</td>
+                    <td><a href="">Review Completed Projects Here</a></td>
             </tr>
             <tr>
                 <td>IFSC</td>
                 <td>3342</td>
                 <td>Mobile Web Development</td>
+                <td>An in-depth look at modern web technologies to evaluate and test many approaches in an effort to establish 
+                    maintainable workflows and create highly usable sites using a “Mobile First” design philosophy.</td>
+                <td><a href="">Review Completed Projects Here</a></td>
             </tr>
             <tr>
                 <td>ITEC</td>
                 <td>4610</td>
-                <td>Project Development & Portfolio Defense</td>
+                <td>Project Development & Portfolio</td>
+                <td>Work with a private sector client to develop a quality IT solution to address organizational needs as part of
+                    a development team.</td>
+                <td><a href="">Review Completed Projects Here</a></td>
             </tr>
             <tr>
                 <td>ARST</td>
                 <td>3340</td>
                 <td>Graphic Design</td>
+                <td>Applying the elements of art and the principles of design to graphic design solutions.</td>
+                <td><a href="">Review Completed Projects Here</a></td>
             </tr>
             <tr>
                 <td>ARST</td>
                 <td>3385</td>
                 <td>Vector Graphics</td>
+                <td>Developing works of art for illustration and design.</td>
+                <td><a href="">Review Completed Projects Here</a></td>
             </tr>
         </table>
 </section>
@@ -114,13 +128,14 @@ member of a development team. Here are my latest two positions in customer servi
 
 <h3>CareLink, Human Resources</h3>
 <p>December 2015 &#8211; December 2019</p>
-<p>Ensured company & employee compliance of Federal & State regulations and managed employee benefits 
-(Health, Workers Compensation, & Family Medical Leave of Absence).</p>
+<p>Anticipated people's needs and converted those to beneficial actions for the company and employees. Ensured company & employee 
+compliance of Federal & State regulations. Managed employee benefits 
+(health, workers compensation, & family medical leave of absence).</p>
 
 
 <h3>CareLink, Receptionist</h3>
 <p>November 2013 &#8211; December 2015</p>
-<p>Answered general inquiries. Welcomed, greeted, and directed visitors & callers.</p>
+<p>Answered general inquiries. Worked well with others. Welcomed, greeted, and directed visitors & callers.</p>
 </section>
 </div><!--.wrap-->
 </body>
