--- a/resume.html
+++ b/resume.html
@@ -30,8 +30,8 @@
         <li>jcweathingto@ualr.edu</li>
         <li><a href="https://jcweathington.github.io/it-topaz/">IT Project Portfolio</a></li>
     </ul>
-        <p>You are welcome to download my resume in either <a href="assets/documents/resume-doc.doc">Microsoft Word</a> 
-            or <a href="assets/documents/resume-pdf.pdf" target="blank">PDF format</a>.</p>
+        <p>You are welcome to download my resume in either <a href="assets/documents/resume.docx">Microsoft Word</a> 
+            or <a href="assets/documents/resume.pdf" target="blank">PDF format</a>.</p>
 </section><!--author-->
 
 <section id="skills" class="container">
