--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
                     <li><a href="index.html">Profile</a></li>
                     <li><a href="resume.html">Resume</a></li>
                     <li>Education & Projects</li>
-                    <li>Cover Letter</li>
+                    <li><a href="assets/documents/cover-letter.pdf" target="blank">Cover Letter</a></li>
                     <li>Contact</li>
                 </ul>
             </nav>
