--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="index.html">Profile</a></li>
                     <li><a href="resume.html">Resume</a></li>
-                    <li>Education & Projects</li>
+                    <li><a href="experience.html">Education & Projects</a></li>
                     <li><a href="assets/documents/cover-letter.pdf" target="blank">Cover Letter</a></li>
                     <li>Contact</li>
                 </ul>
