--- a/index.html
+++ b/index.html
@@ -3,32 +3,34 @@
 <head>
 <meta charset="utf-8">
 <title>Josephine Weathington"s Resume</title>
-<meta name="description" content="A Web Developer & Graphic Designer">
-<meta name="keywords" content="HTML, CSS, PHP ,JavaScript">
+<meta name="description" content="Josephine Weathington's Portfolio">
+<meta name="keywords" content="">
 <meta name="author" content="Josephine">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrap">
-        <header class="primary">
-            <nav class="menu">
-                <ul>
-                    <li><a href="index.html">Profile</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="experience.html">Education & Projects</a></li>
-                    <li><a href="assets/documents/cover-letter.pdf" target="blank">Cover Letter</a></li>
-                    <li>Contact</li>
-                </ul>
-            </nav>
-        </header>
-<img src="assets/images/temporary-portrait.jpg" alt="portrait"/>   
-<h1>A student majoring in web development at the University of Arkansas at Little Rock with fresh experience in graphic & web 
-    design.</h1>
-<p>I have a passion for UI/UX design (user interface/user experience) and am interested in pursuing a career in UI/UX. 
-I have experience in HTML, CSS, Javascript, & UI/UX; skills that I will demonstrate throughout my website. 
-Also, I have over 10 years of customer service experience that has refined my communication & listening skills, thus making me a 
-valuable member of a development team. Please enjoy my website. I’ve chosen a garden theme to represent my growth in the
-knowledge of web development, design, communication, and even a little bit of philosophy.</p>
+    <header class="primary">
+        <nav class="menu">
+            <ul>
+                <li><a href="projects.html">PROJECTS</a></li>
+                <li><a href="index.html">INTRO</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Hey, I'm Josephine.</h1>
+        <p>I'm a designer and am currently studying at the University of Arkansas at 
+        Little Rock (UALR). I'll be graduating this December 2022 with a 
+        Bachelors of Arts Web Design & Development and information 
+        Technology Minor.
+        </p>
+        <p>I am passionate about UX design and about exploring ways of applying art as a tool for visual communication.</p>
+        <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume</a> & <a href="assets/documents/cover-letter.pdf" 
+        target="blank">cover letter</a>.</p>
+    <img src="assets/images/temporary-portrait.jpg" alt="portrait"/>   
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
