--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
     <!--End Section-->
       
     <!--Section & Articles-->
-    <h1>UX Design</h1>
+    <h1>UX DESIGN</h1>
     <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
     </p>
     <div class="temporary">
@@ -47,7 +47,7 @@
 
 
     <!--Section & Articles-->
-    <h1>Database & Programming</h1>
+    <h1>DATABASE & PROGRAMMING</h1>
     <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
     </p>
     <div class="temporary">
@@ -55,6 +55,30 @@
     </div>
     <div class="temporary">
         <a href="programming.html" target="blank">Programming</a>
+    </div>
+    <!--End Section-->
+
+    <!--Section & Articles-->
+    <h1>COMMUNICATION</h1>
+    <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
+    </p>
+    <div class="temporary">
+        <a href="film.html" target="blank">Film</a>
+    </div>
+    <div class="temporary">
+        <a href="typography.html" target="blank">Typography</a>
+    </div>
+    <!--End Section-->
+
+    <!--Section & Articles-->
+    <h1>WRITING</h1>
+    <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
+    </p>
+    <div class="temporary">
+        <a href="technical-doc.html" target="blank">Technical Documents</a>
+    </div>
+    <div class="temporary">
+        <a href="reflection.html" target="blank">Watch Me Grow</a>
     </div>
     <!--End Section-->
     
