--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         target="blank">cover letter</a>.</p>
     <img src="assets/images/temporary-portrait.jpg" alt="portrait"/>   
 </div>
+<footer>
+    <div class="copyright">
+       &copy JAW 2022
+    </div>
+    <div class="contact">
+       <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
+    </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
