--- a/index.html
+++ b/index.html
@@ -23,12 +23,37 @@
     <h1>Hey, I'm Josephine.</h1>
         <p>I'm a designer and am currently studying at the University of Arkansas at 
         Little Rock (UALR). I'll be graduating this December 2022 with a 
-        Bachelors of Arts Web Design & Development and information 
+        Bachelors of Arts Web Design & Development and Information 
         Technology Minor.
         </p>
         <p>I am passionate about UX design and about exploring ways of applying art as a tool for visual communication.</p>
         <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume</a> & <a href="assets/documents/cover-letter.pdf" 
         target="blank">cover letter</a>.</p>
+    <h2>COURSES & EXPERIENCE</h2>
+    <dl>
+        <dt>COURSES</dt>
+        <dd>Google UX Design Certification // Expected May 2023</dd>
+        <dd>Mobile Web Development IFSC 3342</dd>
+    </dl>
+    <dl>
+        <dt>CARELINK // 2013 - 2019</dt>
+        <dd>Human Resource 2015 - 2019 // Receptionist 2013 - 2015</dd>
+        <dd>Anticipated people's needs & converted those to beneficial 
+            actions for the company & employees.</dd>
+    </dl>
+    <h2>SKILLS</h2>
+    <dl>
+        <dt>WEB DEVELOPMENT</dt>
+        <dd>HTML, CSS, PHP, JavaScript, WordPress, Bootstrap</dd>
+    </dl>
+    <dl>
+        <dt>ADOBE</dt>
+        <dd>.xd .ai .ae .indd .psd .pr        </dd>
+    </dl>
+    <dl>
+        <dt>COLLABORATION TOOLS</dt>
+        <dd>Figma, Trello, Google Workspace</dd>
+    </dl>
     <img src="assets/images/temporary-portrait.jpg" alt="portrait"/>   
 </div>
 <footer>
