--- a/projects.html
+++ b/projects.html
@@ -13,13 +13,17 @@
 <body>
 <div class="wrap">
     <header class="primary">
-        <nav class="menu">
-            <ul>
-                <li><a href="projects.html">PROJECTS</a></li>
-                <li><a href="index.html">INTRO</a></li>
-            </ul>
-        </nav>
-    </header>
+        <div class="navigation">
+            <div class="brand">JAW</div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="index.html">INTRO</a></li>
+                </ul>
+            </nav>
+            </div>
+            <div class="author">Josephine Aaron Weathington</div>
+        </header>
     
     <!--Section & Articles-->
     <h1>WEB DEVELOPMENT & DESIGN</h1>
