--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 <body>
 <div class="wrap">
     <header class="primary">
+    <div class="navigation">
+        <div class="brand">JAW</div>
         <nav class="menu">
             <ul>
                 <li><a href="projects.html">PROJECTS</a></li>
                 <li><a href="index.html">INTRO</a></li>
             </ul>
         </nav>
+        </div>
+        <div class="author">Josephine Aaron Weathington</div>
     </header>
     <h1>Hey, I'm Josephine.</h1>
         <p>I'm a designer and am currently studying at the University of Arkansas at 
