--- a/technical-doc.html
+++ b/technical-doc.html
@@ -11,6 +11,18 @@
 <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
+   <header class="primary">
+      <div class="navigation">
+          <div class="brand">JAW</div>
+          <nav class="menu">
+              <ul>
+                  <li><a href="projects.html">PROJECTS</a></li>
+                  <li><a href="index.html">INTRO</a></li>
+              </ul>
+          </nav>
+          </div>
+          <div class="author">Josephine Aaron Weathington</div>
+      </header>
 <div class="wrap">
 <h1>COMING SOON</h1>
 </div>
