--- a/projects.html
+++ b/projects.html
@@ -42,10 +42,10 @@
     <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
     </p>
     <div class="temporary">
-        <a href="ux-campus-police.html" target="blank">UALR App</a>
+        <a href="ux-campus-police.html" target="blank">UALR Campus Police App</a>
     </div>
     <div class="temporary">
-        <a href="ux-campus-food.html" target="blank">UALR App</a>
+        <a href="ux-campus-food.html" target="blank">UALR Food Ordering Service App</a>
     </div>
     <!--End Section-->
 
@@ -62,6 +62,7 @@
     </div>
     <!--End Section-->
 
+
     <!--Section & Articles-->
     <h1>COMMUNICATION</h1>
     <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
@@ -74,6 +75,7 @@
     </div>
     <!--End Section-->
 
+
     <!--Section & Articles-->
     <h1>WRITING</h1>
     <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
@@ -83,6 +85,20 @@
     </div>
     <div class="temporary">
         <a href="reflection.html" target="blank">Watch Me Grow</a>
+    </div>
+    <!--End Section-->
+
+    
+    <!--Section & Articles-->
+    <h1>OTHER PROJECTS</h1>
+    <div class="temporary">
+        <a href="technical-doc.html" target="blank">...</a>
+    </div>
+    <div class="temporary">
+        <a href="reflection.html" target="blank">...</a>
+    </div>
+    <div class="temporary">
+        <a href="reflection.html" target="blank">...</a>
     </div>
     <!--End Section-->
     
