--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
     <div class="copyright">
        &copy JAW 2022
     </div>
+    <div class="location">
+        Living in Arkansas & loving it; so I will not relocate.
+    </div>
     <div class="contact">
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
