--- a/projects.html
+++ b/projects.html
@@ -27,13 +27,14 @@
     
     <!--Section & Articles-->
     <h1>WEB DEVELOPMENT & DESIGN</h1>
-    <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
+    <p>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.
+        - Intro to IT and Applications (2021 - 2022) // Straight outta the course syllabus.
     </p>
     <div class="temporary">
-    <a href="web-buffalo-river.html" target="blank">Buffalo River Adventurers</a>
+    <a href="web-buffalo-river.html">Buffalo River Adventurers</a>
     </div>
     <div class="temporary">
-        <a href="web-university-district.html" target="blank">University District</a>
+        <a href="web-university-district.html">University District</a>
     </div>
     <!--End Section-->
       
@@ -42,10 +43,10 @@
     <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
     </p>
     <div class="temporary">
-        <a href="ux-campus-police.html" target="blank">UALR Campus Police App</a>
+        <a href="ux-campus-police.html">UALR Campus Police App</a>
     </div>
     <div class="temporary">
-        <a href="ux-campus-food.html" target="blank">UALR Food Ordering Service App</a>
+        <a href="ux-campus-food.html">UALR Food Ordering Service App</a>
     </div>
     <!--End Section-->
 
@@ -55,10 +56,10 @@
     <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
     </p>
     <div class="temporary">
-        <a href="database.html" target="blank">Database</a>
+        <a href="database.html">Database</a>
     </div>
     <div class="temporary">
-        <a href="programming.html" target="blank">Programming</a>
+        <a href="programming.html">Programming</a>
     </div>
     <!--End Section-->
 
@@ -68,10 +69,10 @@
     <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
     </p>
     <div class="temporary">
-        <a href="film.html" target="blank">Film</a>
+        <a href="film.html">Film</a>
     </div>
     <div class="temporary">
-        <a href="typography.html" target="blank">Typography</a>
+        <a href="typography.html">Typography</a>
     </div>
     <!--End Section-->
 
