--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,7 @@
     <p>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.
         - Intro to IT and Applications (2021 - 2022) // Straight outta the course syllabus.
     </p>
+    <p>"Design is the intermediary between information and understanding." -- Hans Hoffman, artist and teacher</p>
     <div class="temporary">
     <a href="web-buffalo-river.html">Buffalo River Adventurers</a>
     </div>
@@ -40,8 +41,8 @@
       
     <!--Section & Articles-->
     <h1>UX DESIGN</h1>
-    <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
-    </p>
+    <p>"Design is not just what it looks like and feels like. Design is how it works." -- Steve Jobs, co-founder of Apple, Inc.</p>
+    <p>"Design is intelligence made visible." -- Alina Wheeler, author</p>
     <div class="temporary">
         <a href="ux-campus-police.html">UALR Campus Police App</a>
     </div>
@@ -53,8 +54,7 @@
 
     <!--Section & Articles-->
     <h1>DATABASE & PROGRAMMING</h1>
-    <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
-    </p>
+    <p>"Design adds value faster than it adds costs." -- Joel Spolsky, web programmer, writer, and creator of Trello</p>
     <div class="temporary">
         <a href="database.html">Database</a>
     </div>
@@ -66,8 +66,8 @@
 
     <!--Section & Articles-->
     <h1>COMMUNICATION</h1>
-    <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
-    </p>
+    <p>"Design creates culture. Culture shapes values. Values determine the future." -- Robert L. Peters, designer and author</p>
+    <p>"Styles come and go. Good design is a language, not a style." -- Massimo Vignelli, Italian designer</p>
     <div class="temporary">
         <a href="film.html">Film</a>
     </div>
@@ -79,8 +79,8 @@
 
     <!--Section & Articles-->
     <h1>WRITING</h1>
-    <p>Lorem ipsum dolor sit amet, summo reprehendunt est at. Diam agam has ne, hinc feugait placerat ex vel. Vocent pertinax pri no, id quodsi molestie consulatu eos, vix quem lobortis imperdiet in. Mei id probo nonumy adipiscing, sed temporibus repudiandae ex, eos at doctus noluisse hendrerit. Erant disputationi ad duo, eos eu ullum laoreet antiopam. Usu an enim delenit definitiones.
-    </p>
+    <p>"Make it simple, but significant." -- Don Draper, fictional character on Mad Men</p>
+    <p>“Every great design begins with an even better story”. -- Lorinda Mamo</p>
     <div class="temporary">
         <a href="technical-doc.html" target="blank">Technical Documents</a>
     </div>
