--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
     <!--Section & Articles-->
     <h1>WRITING</h1>
     <p>"Make it simple, but significant." -- Don Draper, fictional character on Mad Men</p>
-    <p>“Every great design begins with an even better story”. -- Lorinda Mamo</p>
+    <p>“Every great design begins with an even better story”. -- Lorinda Mamo, designer and creative director</p>
     <div class="temporary">
         <a href="technical-doc.html" target="blank">Technical Documents</a>
     </div>
