--- a/web-university-district.html
+++ b/web-university-district.html
@@ -24,7 +24,11 @@
             <div class="author">Josephine Aaron Weathington</div>
         </header>
 <div class="wrap">
-    <h1>COMING SOON</h1>
+    <h1>IFCS 4610 UNIVERSITY DISTRICT</h1>
+    <p>A wordpress website for the UALR University District Parnership to market the University District as a destination, to 
+        encourage development, and to promote the business and services within the area.</p>
+    <p>Stylistic choices were made to...</p>
+    <a href="https://web-projects.net/ud/">Visit the site.</a>
 </div>
 <footer>
     <div class="copyright">
