--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -24,7 +24,11 @@
           <div class="author">Josephine Aaron Weathington</div>
       </header>
 <div class="wrap">
-<h1>COMING SOON</h1>
+    <h1>IFCS 3650 BUFFALO RIVER ADVENTURERS 2022</h1>
+    <p>An static website for fictional organization, Buffalo River Adventurers, to inspire outdoor enthusiasts to explore the 
+        Buffalo National River and to enjoy their experience in an environmentally friendly way.</p>
+    <p>Stylistic choices were made to...</p>
+    <a href="">Visit the site.</a>
 </div>
 <footer>
     <div class="copyright">
