--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -28,6 +28,7 @@
     <p>An static website for a fictional organization, Buffalo River Adventurers, to inspire outdoor enthusiasts to explore the 
         Buffalo National River and to enjoy their experience in an environmentally friendly way.</p>
     <p>Stylistic choices were made to...</p>
+    <p>Design decisions included...</p>
     <a href="">Visit the site.</a>
 </div>
 <footer>
