--- a/web-university-district.html
+++ b/web-university-district.html
@@ -28,6 +28,7 @@
     <p>A wordpress website for the UALR University District Parnership to market the University District as a destination, to 
         encourage development, and to promote the business and services within the area.</p>
     <p>Stylistic choices were made to...</p>
+    <p>Design decisions included...</p>
     <a href="https://web-projects.net/ud/">Visit the site.</a>
 </div>
 <footer>
