--- a/ux-campus-food.html
+++ b/ux-campus-food.html
@@ -24,8 +24,30 @@
           <div class="author">Josephine Aaron Weathington</div>
       </header>
 <div class="wrap">
-<h1>COMING SOON</h1>
+    <h1>CPSC 4379 FOOD ORDERING SERVICE APP 2022</h1>
+    <p>A prototype design of a food app for a college campus that allows the various restaurants on campus to deliver directly to 
+        students & faculty.</p>
+    <p>Design choices included...</p>
+    <a href="">Interact with the prototype.</a>
 </div>
+
+<!--ARTICLES-->
+<div class="wrap">
+    <h1>RESEARCH</h1>
+</div>
+
+<div class="wrap">
+    <h1>DESIGN FLOW</h1>
+</div>
+
+<div class="wrap">
+    <h1>PROTOTYPE PROCESS</h1>
+</div>
+
+<div class="wrap">
+    <h1>USABILITY TEST ANALYSIS</h1>
+</div>
+<!--END OF ARTICLES-->
 <footer>
     <div class="copyright">
        &copy JAW 2022
