--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -24,8 +24,28 @@
           <div class="author">Josephine Aaron Weathington</div>
       </header>
 <div class="wrap">
-<h1>COMING SOON</h1>
+    <h1>CPSC 4379 CAMPUS SAFTEY APP 2022</h1>
+    <p>A prototype design of an app that allows college students to report non-emergency incidents that have occured on campus.</p>
+    <p>Design choices included...</p>
+    <a href="">Interact with the prototype.</a>
 </div>
+<!--ARTICLES-->
+<div class="wrap">
+    <h1>RESEARCH</h1>
+</div>
+
+<div class="wrap">
+    <h1>DESIGN FLOW</h1>
+</div>
+
+<div class="wrap">
+    <h1>PROTOTYPE PROCESS</h1>
+</div>
+
+<div class="wrap">
+    <h1>USABILITY TEST ANALYSIS</h1>
+</div>
+<!--END OF ARTICLES-->
 <footer>
     <div class="copyright">
        &copy JAW 2022
