--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Josephine Weathington"s Resume</title>
+<title>JAW's Portfolio</title>
 <meta name="description" content="A Web Developer & Graphic Designer">
 <meta name="keywords" content="HTML, CSS, PHP ,JavaScript">
 <meta name="author" content="Josephine">
