--- a/technical-doc.html
+++ b/technical-doc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Josephine Weathington"s Resume</title>
+<title>JAW's Portfolio</title>
 <meta name="description" content="Josephine Weathington's Portfolio">
 <meta name="keywords" content="">
 <meta name="author" content="Josephine">
