--- a/programming.html
+++ b/programming.html
@@ -23,9 +23,22 @@
           </div>
           <div class="author">Josephine Aaron Weathington</div>
       </header>
+<!--JUMBOTRON HERE MARS ROVER // change picture to adobe free stock pic-->
+<!--SECTION/ARTICES-->
 <div class="wrap">
-<h1>COMING SOON</h1>
-</div>
+    <h1>ITEC 3650 MARS ROVER</h1>
+    <P>A JSON API retrieval of the Mars Rover photos from NASA that I developed in Intro to IT & Applications course (ITEC 3650).</P>
+    <a href="" target="blank">Test the program here.</a>
+    </div>
+    <!--optimized image of rover close up here-->
+    
+    <div class="wrap">
+        <h1>ITEC 3610 CURRENCY VALUE HISTORY</h1>
+        <P>An application of JSON to retreive & convert currency values from Polygon.io that I developed in Intro to IT &
+            Applications course (ITEC 3650).</P>
+        <a href="" target="blank">Test the program here.</a>
+    </div>
+    <!--optimized image here-->
 <footer>
     <div class="copyright">
        &copy JAW 2022
