--- a/programming.html
+++ b/programming.html
@@ -25,6 +25,8 @@
       </header>
 <!--JUMBOTRON HERE MARS ROVER // change picture to adobe free stock pic-->
 <!--SECTION/ARTICES-->
+<div class="container">
+
 <div class="wrap">
     <h1>ITEC 3650 MARS ROVER</h1>
     <P>A JSON API retrieval of the Mars Rover photos from NASA that I developed in Intro to IT & Applications course (ITEC 3650).</P>
@@ -47,6 +49,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
