--- a/technical-doc.html
+++ b/technical-doc.html
@@ -23,6 +23,7 @@
           </div>
           <div class="author">Josephine Aaron Weathington</div>
       </header>
+<div class="container">
 <div class="wrap">
 <h1>COMING SOON</h1>
 </div>
@@ -34,6 +35,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
