--- a/database.html
+++ b/database.html
@@ -25,6 +25,7 @@
       </header>
 <!--JUMBOTRON HERE-->
 <!--SECTION/ARTICES-->
+<div class="container">
 <div class="wrap">
 <h1>ITEC 3610 DATABASE ASSESSMENT</h1>
 <P>A database assessment I completed in Intro to IT & Applications course (ITEC 3610).</P>
@@ -49,6 +50,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
