--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="wrap">
-    <header class="primary">
+        <header class="primary">
     <div class="navigation">
         <div class="brand">JAW</div>
         <nav class="menu">
@@ -24,6 +23,7 @@
         </div>
         <div class="author">Josephine Aaron Weathington</div>
     </header>
+    <div class="container">
     <h1>Hey, I'm Josephine.</h1>
         <p>I'm a designer and am currently studying at the University of Arkansas at 
         Little Rock (UALR). I'll be graduating this December 2022 with a 
@@ -59,7 +59,6 @@
         <dd>Figma, Trello, Google Workspace</dd>
     </dl>
     <img src="assets/images/temporary-portrait.jpg" alt="portrait"/>   
-</div>
 <footer>
     <div class="copyright">
        &copy JAW 2022
@@ -71,6 +70,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
