--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,6 @@
 <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="wrap">
     <header class="primary">
         <div class="navigation">
             <div class="brand">JAW</div>
@@ -24,7 +23,7 @@
             </div>
             <div class="author">Josephine Aaron Weathington</div>
         </header>
-    
+        <div class="container">
     <!--Section & Articles-->
     <h1>WEB DEVELOPMENT & DESIGN</h1>
     <p>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.
@@ -101,9 +100,7 @@
     <div class="temporary">
         <a href="reflection.html" target="blank">...</a>
     </div>
-    <!--End Section-->
-    
-</div>
+    <!--End Section--> 
 <footer>
     <div class="copyright">
        &copy JAW 2022
@@ -112,6 +109,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
