--- a/typography.html
+++ b/typography.html
@@ -23,9 +23,15 @@
           </div>
           <div class="author">Josephine Aaron Weathington</div>
       </header>
-<div class="wrap">
-<h1>COMING SOON</h1>
-</div>
+      <!--JUMBOTRON MENU IMAGE HERE-->
+    <div class="container">
+        <div class="wrap">
+        <h1>ARST 3341 COMMUNICATION 2021</h1>
+            <p>An exploration of the art and practice of type as a tool for visual communication.</p>
+    </div>
+    <!--INFO TYPE IMAGE TO THE RIGHT OF TEXT-->
+    <!--2 INFO TYPE IMAGES TO LEFT AND RIGHT-->
+    <!--PUBLICATION DESIGN FULL WIDTH-->
 <footer>
     <div class="copyright">
        &copy JAW 2022
@@ -34,6 +40,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
