--- a/ux-campus-food.html
+++ b/ux-campus-food.html
@@ -23,11 +23,11 @@
           </div>
           <div class="author">Josephine Aaron Weathington</div>
       </header>
+<div class="container">
 <div class="wrap">
     <h1>CPSC 4379 FOOD ORDERING SERVICE APP 2022</h1>
     <p>A prototype design of a food app for a college campus that allows the various restaurants on campus to deliver directly to 
         students & faculty.</p>
-    <p>Design choices included...</p>
     <a href="">Interact with the prototype.</a>
 </div>
 
@@ -56,6 +56,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
