--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -23,10 +23,10 @@
           </div>
           <div class="author">Josephine Aaron Weathington</div>
       </header>
+<div class="container">
 <div class="wrap">
     <h1>CPSC 4379 CAMPUS SAFTEY APP 2022</h1>
     <p>A prototype design of an app that allows college students to report non-emergency incidents that have occured on campus.</p>
-    <p>Design choices included...</p>
     <a href="">Interact with the prototype.</a>
 </div>
 <!--ARTICLES-->
@@ -54,6 +54,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
