--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -23,13 +23,14 @@
           </div>
           <div class="author">Josephine Aaron Weathington</div>
       </header>
+<div class="container">
 <div class="wrap">
     <h1>IFCS 3650 BUFFALO RIVER ADVENTURERS 2022</h1>
     <p>An static website for a fictional organization, Buffalo River Adventurers, to inspire outdoor enthusiasts to explore the 
         Buffalo National River and to enjoy their experience in an environmentally friendly way.</p>
     <p>Stylistic choices were made to...</p>
     <p>Design decisions included...</p>
-    <a href="">Visit the site.</a>
+    <a href="" target="blank">Visit the site.</a>
 </div>
 <footer>
     <div class="copyright">
@@ -39,6 +40,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
