--- a/web-university-district.html
+++ b/web-university-district.html
@@ -23,13 +23,14 @@
             </div>
             <div class="author">Josephine Aaron Weathington</div>
         </header>
+<div class="container">
 <div class="wrap">
     <h1>IFCS 4610 UNIVERSITY DISTRICT 2022</h1>
     <p>A wordpress website for the UALR University District Parnership to market the University District as a destination, to 
         encourage development, and to promote the business and services within the area.</p>
     <p>Stylistic choices were made to...</p>
     <p>Design decisions included...</p>
-    <a href="https://web-projects.net/ud/">Visit the site.</a>
+    <a href="https://web-projects.net/ud/" target="blank">Visit the site.</a>
 </div>
 <footer>
     <div class="copyright">
@@ -39,6 +40,7 @@
        <ul><li>EMAIL</li><li>LINKEDIN</li><li>INSTAGRAM</li></ul>
     </div>
 </footer>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
