--- a/typography.html
+++ b/typography.html
@@ -26,12 +26,23 @@
       <!--JUMBOTRON MENU IMAGE HERE-->
     <div class="container">
         <div class="wrap">
-        <h1>ARST 3341 COMMUNICATION 2021</h1>
-            <p>An exploration of the art and practice of type as a tool for visual communication.</p>
+        <h1>ARST 3341: TYPOGRAPHY 2021</h1>
+            <p>An exploration of the art and practice of typography as a tool for visual communication.</p>
     </div>
     <!--INFO TYPE IMAGE TO THE RIGHT OF TEXT-->
     <!--2 INFO TYPE IMAGES TO LEFT AND RIGHT-->
     <!--PUBLICATION DESIGN FULL WIDTH-->
+    <div class="wrap">
+        <h1>ARST 3340: INTRO TO GRAPHIC DESIGN 2021</h1>
+            <p>Editorial designs of a fictional organization that communicate a controversial issue of my choosing.</p>
+    </div>
+    <!--IMAGE OF POSTER FOR CHANGE HERE-->
+    <div class="wrap">
+        <h2>CREDITS</h2>
+        <p>Copyright // How Do We End Racism In Policing: American Civil Liberties Union (ACLU)</p>
+        <p>Photograph // James Baldwin: Popperfoto/Getty Images</p>
+        <p>Photograph // George Floyd: Darnella Frazier</p>
+    </div>
 <footer>
     <div class="copyright">
        &copy JAW 2022
