--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -25,8 +25,8 @@
       </header>
 <div class="container">
 <div class="wrap">
-    <h1>IFCS 3650 BUFFALO RIVER ADVENTURERS 2022</h1>
-    <p>An static website for a fictional organization, Buffalo River Adventurers, to inspire outdoor enthusiasts to explore the 
+    <h1>IFCS 3650: GUIDED APPLICATIONS IN IT // BUFFALO RIVER ADVENTURERS 2022</h1>
+    <p>A static website for a fictional organization, Buffalo River Adventurers, to inspire outdoor enthusiasts to explore the 
         Buffalo National River and to enjoy their experience in an environmentally friendly way.</p>
     <p>Stylistic choices were made to...</p>
     <p>Design decisions included...</p>
