--- a/typography.html
+++ b/typography.html
@@ -34,7 +34,7 @@
     <!--PUBLICATION DESIGN FULL WIDTH-->
     <div class="wrap">
         <h1>ARST 3340: INTRO TO GRAPHIC DESIGN 2021</h1>
-            <p>Editorial designs of a fictional organization that communicate a controversial issue of my choosing.</p>
+            <p>Editorial designs of fictional organizations that communicate a controversial issue of my choosing.</p>
     </div>
     <!--IMAGE OF POSTER FOR CHANGE HERE-->
     <div class="wrap">
