--- a/typography.html
+++ b/typography.html
@@ -36,7 +36,7 @@
         <h1>ARST 3340: INTRO TO GRAPHIC DESIGN 2021</h1>
             <p>Editorial designs of fictional organizations that communicate a controversial issue of my choosing.</p>
     </div>
-    <!--IMAGE OF POSTER FOR CHANGE HERE-->
+    <!--IMAGE OF POSTER FOR CHANGE ON RIGHT, MAGAZINE COVER ON LEFT-->
     <div class="wrap">
         <h2>CREDITS</h2>
         <p>Copyright // How Do We End Racism In Policing: American Civil Liberties Union (ACLU)</p>
